--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=consumer
 
-spring.cloud.stream.bindings.input.destination=traffic-data
-
+spring.cloud.stream.bindings.native-input.destination=traffic-data
+spring.cloud.stream.bindings.native-input.binder=kstream
